@@ -1,3 +1,10 @@
+2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Update release scripts.
+	* Makefile.am: Include new scripts.
+	* build-aux: Synchronize.
+	* doc/Makefile.am: Fix include path.
+
 2009-11-15  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix normalize implementation.
